--- a/bio_style.css
+++ b/bio_style.css
@@ -1,11 +1,14 @@
-/*bio_style.css*/
-
-h0{
-	text-align: left;
-	font-size: 40px;
+h1{
+	text-size:40px;
+	text-align:anchor;
+	font-style: italic;
+	font-family: serif;
 }
 h4{
 	text-align: left;
-	font-size: 25px;
-	width: 10em;
+	margin-left: 40px;
+	font-family: sans-serif;
+	font-weight: lighter;
+	font-size: 20px;
+	width: 30em;
 }
